casi terminado S(sin probar) el endpoint de membership
