# backend/src/main/java/gal/usc/telariabackend/controllers/MembershipController.java
@@ -1,9 +1,10 @@
 package gal.usc.telariabackend.controllers;
 
 import gal.usc.telariabackend.model.dto.CreateInvitationRequest;
-import gal.usc.telariabackend.model.dto.CreateTrip201Response;
 import gal.usc.telariabackend.model.dto.InvitationSummary;
 import gal.usc.telariabackend.model.dto.ResolveJoinRequest;
+import gal.usc.telariabackend.services.MembershipService;
+import gal.usc.telariabackend.utils.SecurityHelper;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.context.request.NativeWebRequest;
@@ -15,38 +16,51 @@ import java.util.UUID;
 @RestController
 public class MembershipController implements MembershipApi{
 
+    private MembershipService membershipService;
+
+    private final SecurityHelper securityHelper;
+
+    public MembershipController(SecurityHelper securityHelper) {
+        this.securityHelper = securityHelper;
+    }
+
     @Override
     public Optional<NativeWebRequest> getRequest() {
         return MembershipApi.super.getRequest();
     }
 
     @Override
-    public ResponseEntity<CreateTrip201Response> createInvitation(UUID userId, CreateInvitationRequest createInvitationRequest) {
-        return MembershipApi.super.createInvitation(userId, createInvitationRequest);
+    public ResponseEntity<Void> createInvitation(UUID userId, CreateInvitationRequest createInvitationRequest) {
+        membershipService.createInvitation(userId, securityHelper.getUserId(), createInvitationRequest.getTripId());
+        return ResponseEntity.noContent().build();
     }
 
     @Override
     public ResponseEntity<Void> createJoinRequest(UUID tripId) {
-        return MembershipApi.super.createJoinRequest(tripId);
+        membershipService.createJoinRequest(securityHelper.getUserId(), tripId);
+        return ResponseEntity.noContent().build();
     }
 
     @Override
     public ResponseEntity<List<InvitationSummary>> getMyInvitations() {
-        return MembershipApi.super.getMyInvitations();
+        return ResponseEntity.ok(membershipService.getMyInvitations(securityHelper.getUserId()));
     }
 
     @Override
     public ResponseEntity<Void> leaveTrip(UUID tripId) {
-        return MembershipApi.super.leaveTrip(tripId);
+        membershipService.leaveTrip(securityHelper.getUserId(),tripId);
+        return ResponseEntity.ok().build();
     }
 
     @Override
     public ResponseEntity<Void> resolveInvitation(UUID invitationId, ResolveJoinRequest resolveJoinRequest) {
-        return MembershipApi.super.resolveInvitation(invitationId, resolveJoinRequest);
+        membershipService.resolveInvitation(invitationId, securityHelper.getUserId(), resolveJoinRequest.getAccepted());
+        return ResponseEntity.ok().build();
     }
 
     @Override
     public ResponseEntity<Void> resolveJoinRequest(UUID tripId, UUID requestId, ResolveJoinRequest resolveJoinRequest) {
-        return MembershipApi.super.resolveJoinRequest(tripId, requestId, resolveJoinRequest);
+        membershipService.resolveJoinRequest(requestId, tripId, securityHelper.getUserId(), resolveJoinRequest.getAccepted());
+        return ResponseEntity.ok().build();
     }
 }
